This time, I for real fixed the footer. I also fixed the navBar uncollapse button not working.

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -14,6 +14,5 @@
     
 }
 footer{
-    border-width:5px !important;
-    border-top:10px solid red;
+    border-top:5px solid black;
 }
